Fix: minor alignment issues in register cards and volunteer card

--- a/apps/helper-app/src/home/home.component.scss
+++ b/apps/helper-app/src/home/home.component.scss
@@ -219,7 +219,7 @@ input[type='number'] {
         color: #fff;
 
         .text {
-          padding: 2 * $basic-spacer 0 2 * $basic-spacer 2 * $basic-spacer;
+          padding: 16px 0 16px 12px;
         }
 
         &.bg-blue {
